# th-desugar

./: .gitignore  .travis.yml  Bug.hs  CHANGES.md  Changelog  Foo.hs  Makefile  README.md  Test.hs  cabal.haskell-ci  cabal.project  figures.txt  th-desugar.cabal  th-lift.cabal
.github/workflows/: haskell-ci.yml
Language/Haskell/TH/: Desugar.hs  Lift.hs
Language/Haskell/TH/Desugar/: AST.hs  Context.hs  Core.hs  Expand.hs  FV.hs  Lift.hs  Match.hs  Monad.hs  OMap.hs  OMapSetUtil.hs  OSet.hs  Reify.hs  Subst.hs  Sweeten.hs  Util.hs
Language/Haskell/TH/Desugar/OMap/: Internal.hs  Strict.hs
Language/Haskell/TH/Desugar/OSet/: Internal.hs
Language/Haskell/TH/Desugar/Subst/: Capturing.hs
Test/: Context.hs  Dec.hs  DsDec.hs  FakeSums.hs  FakeTuples.hs  ReifyTypeCUSKs.hs  ReifyTypeSigs.hs  Run.hs  Splices.hs  T158Exp.hs  T159Decs.hs  T183.hs
docs/: LambdaCaseMigration.md
src/Language/Haskell/TH/: Lift.hs
t/: Foo.hs  Test.hs
