Name:               th-lift
Version:            0.2
License:            OtherLicense
License-File:       COPYING
Copyright:          Ian Lynagh, 2006
Author:             Ian Lynagh
Maintainer:         igloo@earth.li
Stability:          experimental
Synopsis:           Derive Template Haskell's Lift class for datatypes.
Description:
    Derive Template Haskell's Lift class for datatypes.
Category:           Language
Tested-With:        GHC==6.12
Build-Depends:      base >= 4 && < 5, template-haskell >= 2.4
Extensions:         TemplateHaskell, MagicHash
build-type:         Simple
Extra-source-files: BSD3, GPL-2, Changelog, Foo.hs, Test.hs
Exposed-modules:
    Language.Haskell.TH.Lift

