Name:               th-lift
Version:            0.4
Cabal-Version:	    >= 1.6
License:            OtherLicense
License-File:       COPYING
Copyright:          Ian Lynagh, 2006
Author:             Ian Lynagh
Maintainer:         Mathieu Boespflug <mboes@tweag.net>
Synopsis:           Derive Template Haskell's Lift class for datatypes.
Description:
    Derive Template Haskell's Lift class for datatypes.
Category:           Language
Tested-With:        GHC==6.12
Build-Depends:      base >= 4 && < 5, template-haskell >= 2.4
Extensions:         TemplateHaskell, MagicHash, TypeSynonymInstances
build-type:         Simple
Extra-source-files: BSD3, GPL-2, Changelog, t/Foo.hs, t/Test.hs
Exposed-modules:
    Language.Haskell.TH.Lift

source-repository head
  type:     git
  location: git://github.com/mboes/th-lift
